--- a/source.yml
+++ b/source.yml
@@ -3,6 +3,9 @@ name: ric
 imports:
     - github: rock-core/package_set
 
+
+version_control:
+
 ######################
 # Planning
 ######################
