--- a/source.yml
+++ b/source.yml
@@ -2,6 +2,8 @@ name: ric
 
 imports:
     - github: rock-core/package_set
+    - github: rock-cpp/package_set
+    - github: envire/envire-package_set
 
 
 version_control:
