Missing entry in source.yml

--- a/source.yml
+++ b/source.yml
@@ -23,3 +23,7 @@ version_control:
     - planning/traversability_generator3d:
       github: dfki-ric/traversability_generator3d
       branch: main
+
+    - planning/sbpl_spline_primitives:
+      github: rock-planning/planning-sbpl_spline_primitives
+
